<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clCountPizza"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvMenu"
        android:textColor="#171717"
        android:background="#86FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPizza1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounded"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMenu">

        <TextView
            android:id="@+id/tvPizza1"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:text="@string/tvPizza1"
            android:textColor="#0B0A0A"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvDescriptionPizza1"
            />

        <ImageButton
            android:id="@+id/ibPizza1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/circle_ib_pizza_notchose"
            android:scaleType="fitCenter"
            android:src="@drawable/hawaii_pizza_round2_cut"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvDescriptionPizza1"
            android:layout_width="231dp"
            android:layout_height="68dp"
            android:text="@string/tvDescriptionPizza1"
            android:textAlignment="textStart"
            android:textColor="#0B0A0A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPizza2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_rounded"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clPizza1">

        <TextView
            android:id="@+id/tvPizza2"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:text="@string/tvPizza2"
            android:textColor="#0B0A0A"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibPizza2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/circle_ib_pizza_notchose"
            android:scaleType="fitCenter"
            android:src="@drawable/carbonara_pizza_round"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescriptionPizza2"
            android:layout_width="231dp"
            android:layout_height="68dp"
            android:text="@string/tvDescriptionPizza2"
            android:textAlignment="textStart"
            android:textColor="#0B0A0A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPizza3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_rounded"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clPizza2">

        <TextView
            android:id="@+id/tvPizza3"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:text="@string/tvPizza3"
            android:textColor="#0B0A0A"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibPizza3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/circle_ib_pizza_notchose"
            android:scaleType="fitCenter"
            android:src="@drawable/mislivska_pizza"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescriptionPizza3"
            android:layout_width="231dp"
            android:layout_height="68dp"
            android:text="@string/tvDescriptionPizza3"
            android:textAlignment="textStart"
            android:textColor="#0B0A0A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/ibMinus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/circle_image_button"
        android:src="@drawable/baseline_minus_circle_outline_white_48"
        android:minHeight="48dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        app:layout_constraintBottom_toTopOf="@+id/btnShowActivitySize"
         />

    <TextView
        android:id="@+id/tvCountPizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/tvCountPizza"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@drawable/rectangle_rounded"
        app:layout_constraintBottom_toTopOf="@+id/btnShowActivitySize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"  />

    <ImageButton
        android:id="@+id/ibPlus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/circle_image_button"
        android:minHeight="48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_add_circle_outline_white_48"
        app:layout_constraintBottom_toTopOf="@+id/btnShowActivitySize"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnShowActivitySize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btnShowActivitySize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>